# easy_log

./: README.md
easy_log/: CMakeLists.txt
easy_log/include/: elog_file_cfg.h
easy_log/src/: elog.c  main.cpp  shell.sh
